# cmake_min_consumer_app

./: CMakeLists.txt  README.md
app/: main.cpp
